fixing bugs whith layout on mobile sections-tabs, section-tabs__slider and section-tabs__timetable. Adding new logic in js to switch tabs on button click(in mobile only).

--- a/app/styles/sass/components/_slider.scss
+++ b/app/styles/sass/components/_slider.scss
@@ -229,6 +229,9 @@
           }
       }
   }
+  @include mobile-land {
+    padding: 0 25%;
+  }
 }
 
 
